Increase icon sizes for trash and edit actions to ensure proper visibility

--- a/assets/bi-custom.scss
+++ b/assets/bi-custom.scss
@@ -313,7 +313,7 @@
  }
   #icon-trash svg,
  #icon-edit svg {
-  width: 20px;
+  width: 20px !important;
  }
 
  .sec__newsletter {
